ligolang/src/test/contracts/negative/failwith_wrong_type.ligo

const bad : unit = failwith((nil : list(int)))
